@@ -165,7 +165,7 @@ public:
     QList<Song> getAlbumTracks(const QString &artistId, const QString &albumId) const;
     QList<Song> getAlbumTracks(const Song &song) const { return getAlbumTracks(song.albumArtistOrComposer(), song.albumId()); }
     QList<Song> songs(const QStringList &files, bool allowPlaylists=false) const;
-    QList<LibraryDb::Album> getArtistAlbums(const QString &artist) const;
+    QList<LibraryDb::Album> getArtistOrComposerAlbums(const QString &artist) const;
     void getDetails(QSet<QString> &artists, QSet<QString> &albumArtists, QSet<QString> &composers, QSet<QString> &albums, QSet<QString> &genres);
     bool songExists(const Song &song);
     LibraryDb::Album getRandomAlbum(const QStringList &genres, const QStringList &artists) const { return db->getRandomAlbum(genres, artists); }
